# CultureMech

./: .gitignore  BROWSER_UPDATE_SUMMARY.md  CCAP_SAG_PRODUCTION_DEPLOYMENT.md  CLEANUP_SUMMARY.md  COMPLETION_SUMMARY.txt  CONTRIBUTING.md  DATA_LAYERS.md  DATA_QUALITY_FIXES_SUMMARY.md  EXACT_MATCHING_IMPLEMENTATION.md  FINAL_DELIVERY_SUMMARY.md  GAS_MAPPING_SUMMARY.md  HIERARCHY_INTEGRATION_SUMMARY.md  HIERARCHY_MERGE_IMPLEMENTATION.md  IMPLEMENTATION_COMPLETE.md  IMPLEMENTATION_STATUS.md  IMPLEMENTATION_SUMMARY.md  KOMODO_MEDIADB_IMPLEMENTATION.md  MEDIADIVE_API_COMPOSITION_INVESTIGATION.md  MEDIADIVE_CONCENTRATIONS_INVESTIGATION.md  MEDIADIVE_IMPORT_PLAN.md  MICROBE_MEDIA_PARAM_INTEGRATION_ASSESSMENT.md  MICROGROW_AGENTS_CONCENTRATION_ANALYSIS.md  MIGRATION_GUIDE.md  NEXT_STEPS.md  NORMALIZATION_IMPROVEMENTS.md  PHASE2_IMPLEMENTATION_SUMMARY.md  PROJECT_STATUS_SUMMARY.md  QUICKSTART_HIERARCHY_MERGE.md  RAW_YAML_LAYER.md  README.md  RECIPE_CLEANUP_QUICKSTART.md  UMAP_IMPLEMENTATION_SUMMARY.md  UNICODE_DOT_FIXES.md  UNMAPPED_EXTRACTION_SUMMARY.md  UNMAPPED_INGREDIENTS_SUMMARY.md  UTEX_PRODUCTION_DEPLOYMENT.md  index.html  justfile  project.justfile  pyproject.toml  (+2 more)
.claude/skills/: stats-report.md
app/: index.html  schema.js
backups/pre-migration-20260127-095345/: DATA_SOURCES_SUMMARY.md
conf/: oak_config.yaml
data/: MEDIA_SOURCES.tsv  chemical_name_to_chebi_mapping.json  chemical_name_to_chebi_mapping_enhanced.json  compound_to_chebi_mapping.json  compound_to_chebi_mapping_enhanced.json  culturemech_id_assignment_report.txt  culturemech_id_registry.tsv  metal_ree_analysis.yaml  quality_cleanup_report.txt  solution_to_chebi_mapping.json  unit_conflict_resolution_report.txt
data/curation/: README.md  atcc_crossref_candidates.json  multi_db_crossref_candidates.json  organism_candidates.json  organism_review.csv
data/import_tracking/: IMPORT_SUMMARY.md  MEDIAINGREDIENTMECH_INTEGRATION_SUMMARY.md  MIGRATION_SUMMARY.md  NEW_INGREDIENTS_REPORT.md  communitymech_imports.json  mediaingredientmech_migration_log.json  mediaingredientmech_migration_manifest.yaml  unmapped_media_manifest.yaml  (+2 more)
docs/: -_PHENOL_DEGRADING.html  0.01%_LB_Seawater_Medium.html  0.01%_NPA_(New_Cereal_Leaf-­Prescott_Agar).html  0.01%_RPA_(Rye_Grass­-Prescott_Agar).html  0.3_x_Hyphomicrobium_Medium.html  0.5_x_Artificial_seawater.html  0_01_lb_seawater_medium.html  0_3_x_hyphomicrobium_medium.html  1%_Tryptone_Agar.html  1._NUTRIENT_BROTH.html  10%_MGM-MEDIUM.html  10%_MH_MEDIUM.html  10%_Mixotrophic_Nitrobacter_Medium.html  10%_N-Acetylglucosamine.html  10%_marine_R2A_medium.html  10%_neutralized_sulfide_solution.html  10-Vitamins-solution_(1000x).html  100_mM_Fe_NTA_solution.html  100_x_BG-FPC_solution.html  100_x_Vitamin_mixture.html  100mM_Phosphate_buffer.html  100x_Vitamin_solution.html  100x_vitamin_solution_medium_1398.html  1021.html  1038.html  1063.html  1075.html  1091.html  10_marine_r2a_medium.html  10_mgm_medium.html  10_mh_medium.html  10_mixotrophic_nitrobacter_medium.html  10_wt_wt_skim_milk_supplemented_with_1_mm_sodium_formate.html  10_x_CMD_stock_solution.html  10_x_Korthof_s_basal_medium.html  10_x_M9_salts.html  10_x_M9_salts_(per_l).html  10x_NMS_salts.html  1118.html  1135.html  (+12418 more)
notes/: validation_output.txt
pages/: (Unnamed_medium).html  -_PHENOL_DEGRADING.html  ._OMIZ-PAT_Medium_(modified).html  ._PIRELLULA_MEDIUM_(M30).html  0.01%_LB_Seawater_Medium.html  0.01%_NPA_(New_Cereal_Leaf-­Prescott_Agar).html  0.01%_RPA_(Rye_Grass­-Prescott_Agar).html  0.3_x_Hyphomicrobium_Medium.html  0.5_x_Artificial_seawater.html  1%_F_2_Medium.html  1%_OGAWA_MEDIUM.html  1%_Tryptone_Agar.html  1._NUTRIENT_BROTH.html  10%_(wt_wt)_skim_milk_supplemented_with_1_mM_sodium_formate.html  10%_MGM-MEDIUM.html  10%_MH_MEDIUM.html  10%_Mixotrophic_Nitrobacter_Medium.html  10%_N-Acetylglucosamine.html  10%_marine_R2A_medium.html  10%_neutralized_sulfide_solution.html  10-Vitamins-solution_(1000x).html  1003.html  100_mM_Fe_NTA_solution.html  100_x_BG-FPC_solution.html  100_x_Vitamin_mixture.html  100mM_Phosphate_buffer.html  100x_Vitamin_solution.html  100x_Vitamin_solution_(medium_1398).html  1021.html  1038.html  1051.html  1063.html  1075.html  1091.html  10_x_CMD_stock_solution.html  10_x_Korthof_s_basal_medium.html  10_x_M9_salts.html  10_x_M9_salts_(per_l).html  10x_NMS_salts.html  1107.html  (+10955 more)
reports/: IMPLEMENTATION_SUMMARY_20260317.md  mim_algae_enrichment.json  mim_archaea_enrichment.json  mim_bacterial_dryrun.json  mim_bacterial_enrichment.json  mim_fungal_enrichment.json  mim_specialized_enrichment.json  phase1_mim_enrichment_summary.md  validation_20260316.md  validation_corrected_20260316.md  validation_final_20260316.md
scripts/: add_metal_ree_labels.py  aggregate_mapped_ingredients.py  aggregate_unmapped_ingredients.py  analyze_mapping_methods.py  analyze_metal_concentrations.py  assign_culturemech_ids.py  assign_ingredient_roles.py  batch_review_recipes.py  build_compound_to_chebi_mapping.py  build_enhanced_compound_mapping.py  build_fast_compound_mapping.py  check_chebi_ids.py  cleanup_media_quality.py  cleanup_recipe_ingredients.py  compare_fingerprints.py  compare_merge_results.md  create_recipe_from_input.py  debug_merge_errors.py  diagnose_merge.py  enrich_solutions_with_chebi.py  enrich_sssom_with_ols.py  enrich_with_chebi.py  enrich_with_hierarchy.py  enrich_with_mediaingredientmech.py  export_mediadive_composition.py  extract_truly_unmapped.py  extract_unique_ingredients.py  extract_unmapped_sssom.py  final_statistics.py  find_placeholder_ingredients.py  fix_schema_inconsistencies.py  fix_validation_errors.py  generate_hierarchy_report.py  generate_recipe_indexes.py  generate_sssom_mappings.py  generate_stats.py  import_from_communitymech.py  import_from_culturebotht.py  import_mediadive_solutions.py  infer_ph_values.py  (+28 more)
tests/: test_enrichment_pipeline.py  test_fingerprint.py  test_kg_microbe_integration.py  test_kgx_export.py  test_literature_verifier.py  test_mediaingredientmech_enrichment.py  test_merger.py  test_ols_client.py  test_sssom_generation.py
tmp/: culturemech.py
(+46436 files in other folders)
